frontend/test/should_pass/object_002.grg
using object_model_001;

rule test1 {
    pattern {
        a:A -x:e-> b:A;
        if { 
            b.obj == x.obj; 
            b.obj == null;
            null == null;
	}
    }
    modify {
        eval {
            a.obj = null;
            b.obj = a.obj==null?b.obj:null;
        }
    }
}
