frontend/test/should_fail/object_003.grg
using object_model_001;

rule test1 {
    pattern {
        a:A -x:e-> b:A;
        if { 
            b.obj == x.obj; 
            b.obj == null+x.obj;
	}
    }
    modify {
        eval {
            a.obj = null;
        }
    }
}
